css/base.css
/* ... */
.job:hover .job-title {
  color: var(--theme-color-primary);
}
.job:hover .right-arrow {
  display: block;
}
.job:last-child {
  border-bottom: none;
  padding: 10px 24px;
}
.job:last-child.side-col {
  padding: 10px;
}
.job-img {
  height: 62px;
  width: 62px;
  margin: 0 auto;
}
.job-img.side-col {
  height: auto; 
  width: 100%;
}
.job-title {
  font-size: var(--font-size-medium);
  font-family: var(--font-bold);
  color: var(--title-color);
  margin-bottom: 3px;
  margin-top: 5px;
}
.job-title.side-col {
  font-size: 16px
}
.job-company {
  color: var(--text-color);
}
.job-company.side-col {
  color: var(--text-color);
  font-size: var(--font-size-text);
}

@media screen and (max-width: 768px) {
  .job {
    padding: 5px 0px;
  }
  .job:last-child {
    padding: 5px 0px;
  }
  .job-img {
    height: 42px;
    width: 42px;
  }
  .job-title {
    font-size: var(--font-size-regular);
    font-family: var(--font-bold);
  }
  .job.side-col .job-title {
    font-size: var(--font-size-regular);
  }
  .job-company {
    font-size: var(--font-size-regular);
  }
}

/* --------------------------------------------- */
/* news */
/* --------------------------------------------- */
.news {
  padding: 16px;
  cursor: pointer;
  position: relative;
}
.news.home-news {
  padding: 18px 16px;
}
.news.home-news .news-title{
  line-height: 1.2em;
}
.news:hover .news-title {
  color: var(--theme-color-primary);
}
.news:last-child {
  border-bottom: none;
  padding: 10px 16px;
}
.news-img {
  width: 160px;
  max-width: 100%;
  height: auto;
  max-height: 150px;
  margin: 0 auto;
  padding-top: 14px;
}
.news-title {
  font-size: var(--font-size-header);
  font-family: var(--font-medium);
  color: var(--title-color);
  margin-bottom: 3px;
  margin-top: 0;
}
.news-title.side-col {
  font-size: var(--font-size-medium);
  font-family: var(--font-bold);
  line-height: 1.2em;
}
.news-description {
  color: var(--text-color);
}
.news-description.side-col {
  font-size: var(--font-size-text);
  margin: 0;
}

@media screen and (max-width: 768px) {
  .news {
    padding: 10px;
  }
  .news:last-child {
    padding: 10px;
  }
  .news-img {
    padding-top: 10px;
  }
  .news-title {
    font-size: var(--font-size-medium);
    margin-top: 10px;
  }
  .news-description {
    margin-top: 10px;
  }
  .news-title.side-col {
    margin: 0;
  }
  .news-description.side-col {
    margin: 0;
    margin-bottom: 10px;
  } 
}

/* --------------------------------------------- */
/* home product slider */
/* --------------------------------------------- */
.home-news-slider-container {
  position: relative;
  height: auto;
  margin-top: 30px;
}
.home-news-slider-wrapper {
  width: 100%;
}
.home-news-slide {
  cursor: pointer;
}
.home-news-slide img {
  width: 95%;
  height: auto;
  margin: 0 auto;
  border-radius: 4px;
}
.home-news-slide:hover .home-news-slide-title{
  color: var(--theme-color-primary);
}
.home-news-slide-title {
  font-family: var(--font-medium);
  color: var(--title-color);
  margin: 16px 6px;
}
/* custom slick arrows */
.slick-prev.slick-arrow:before, .slick-next.slick-arrow:before {
  content: " ";
  display: inline-block;
  height: 46px;
  width: 46px;
  border-radius: 50%;
  opacity: 1;
  background-size: contain;
  background-position: top center;
}
.slick-prev.slick-arrow {
  left: -46px;
  top: 69px;
}
.slick-next.slick-arrow {
  right: -22px;
  top: 69px;
}
.slick-prev.slick-arrow:before {
  background-image: url('../images/icons/left-arrow-white.png');
  background-color: var(--theme-color-primary);
}
.slick-next.slick-arrow:before {
  background-image: url('../images/icons/right-arrow-white.png');
  background-color: var(--theme-color-primary);
}
.slick-prev.slick-arrow.slick-disabled:before {
  opacity: 1;
  background-image: url('../images/icons/left-arrow-white.png');
  background-color: var(--disabled-btn-bg);
}
.slick-next.slick-arrow.slick-disabled:before {
  opacity: 1;
  background-image: url('../images/icons/right-arrow-white.png');
  background-color: var(--disabled-btn-bg);
}
@media screen and (max-width: 768px) {
  .home-news-slider-container {
    margin-top: 0;
    padding: 0;
  }
  .home-news-slider-wrapper {
    position: relative;
    top: 0;
    width: 92vw;
    margin-left: 4vw;
  }
  .home-news-slide img {
    width: 98%;
    height: auto;
    margin: 0 auto;
  }
  .home-news-slide-title {
    padding: 0 5px;
  }
}

/* --------------------------------------------- */
/* important addresses */
/* --------------------------------------------- */
.address-list {
  padding-left: 30px;
  padding-bottom: 37px;
  margin-bottom: 0;
}
.address {
  list-style: none;
  margin: 12px 0px 12px 0px;
  font-family: var(--font-medium);
}
.address a {
  color: var(--title-color);
  font-size: var(--font-size-medium);
}
.address:hover a {
  color: var(--theme-color-primary);
  text-decoration: none;
}
.address:before {
  content: ' ';
  display: inline-block;
  background-color: var(--theme-color-primary);
  height: 9px;
  width: 9px;
  border-radius: 50%;
  margin-right: 16px;
}

@media screen and (max-width: 768px) {
  .address-list {
    padding-left: 16px;
    padding-bottom: 20px;
    margin-bottom: 15px;
  }
  .address {
    margin: 7px 0px 7px 0px;
  }
}

/* --------------------------------------------- */
/* bottom quote section */
/* --------------------------------------------- */
.bottom-quote-secton {
  margin-top: 30px;
  margin-bottom: 80px;
}

.quote img {
  width: 100%;
  height: auto;
  border-radius: 4px;
  position: relative;
  box-shadow: 0 14px 24px 0 rgba(38, 40, 48, 0.05);
}
.visitor {
  position: absolute;
  top: 36px;
  left: 150px;
}
.visitor p {
  text-transform: uppercase;
  color: var(--sub-title-color);
  font-size: 15px;
  margin: 0;
}
.visitor .visitor-count {
  color: var(--theme-color-dark);
  font-family: var(--font-bold);
  font-size: 32px;
  line-height: 0.9em;
}
/* ... */

